# code_recipes

Algorithm/Sort/: quickSort.cc  templateBubbleSort.cc
Assemble/objdump/: add.c  add.h  main.c
C/: microMax.c
CMake/condition/: if.cmake
CMake/demo/: CMakeLists.txt
CMake/demo/src/: add.cpp  main.cpp
CMake/func/: func.cmake
CMake/list/: list.cmake
CMake/loop/: foreach.cmake
CMake/makeMathLib/: CMakeLists.txt  main.cc
CMake/makeMathLib/mathFunc/: CMakeLists.txt  mymath.cc  mymath.h
CMake/message/: message.cmake
CMake/micro/: micro.cmake
CMake/set/: set.cmake
CPP/Boost/Memory/: intrusive_ptr.cc  processData.h  referenceCounter.h
CPP/GoogleTest/Basic/: TEST.cc
CPP/Memory/: callFunc.cc  dynamicPointerCast.cc
CPP/STL/algorithm/: adjacent_find.cc  find.cc  find_if.cc  for_each.cc  lower_bound.cc  transform.cc  (+2 more)
CPP/Template/: auto.cc  basicTemplate.cc  functionTemplate.cc  variblePara.cc
CPP/gcov/: test.c
DesignPattern/Pimpl/: main.cc
Python/Basic/: input.py  print.py
cplusplus/: .clangd
cplusplus/Memory/: address.cc  doubleFree.cc  move.cc  move_construct.cpp  move_shared_ptr.cc  multi_thread_change_base_pointer.cpp  returnUniquePointer.cc  return_base_ptr.cc  return_shared_ptr.cc
cplusplus/Template/: is_prime.cpp  templatePara.cc  template_type_deduce.cpp
cplusplus/cpp_11/: auto.cpp  auto_array.cpp  bitset.cpp  constexpr.cpp  initializer_list.cc  tuple.cpp  type_rich.cpp  unique_to_shared.cpp
cplusplus/cpp_14/: string_literals.cpp
cplusplus/cpp_17/: any.cpp  char_literal.cpp  forward.cpp  optional.cpp  string_view.cpp  varient.cpp  visit.cpp
cplusplus/cpp_20/: coneval_function.cpp  constexpr_virtual_function.cpp  template_lambda.cpp  using_enum.cpp  view.cpp  zip.cpp
cplusplus/enum_reflect/: enum_reflect.cpp  enum_reflect.h
cplusplus/func_stype_code/: demo.cpp
cplusplus/reflect/: test.cpp
cplusplus/thread/: async.cpp  future.cpp  literials.cpp  shared_mutex.cpp
design_pattern/Pimpl/: ptr_vector.cc  ptr_vector.hpp
design_pattern/struct_type/: proxy.cpp
golang/demo/: demo000.go  demo001.go  demo002.go  demo003.go  demo004.go  demo005.go  demo006.go
unix/: pthread_key.c  time.c
(+40 files in other folders)
